FEATURE: other http configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 jwt.secret=supersecretstring
+
+logging.level.web=debug
