FIX: Cookie path bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 jwt.secret=supersecretstring
 
 logging.level.web=debug
+loggging.level.com.itays123.javanotebook=debug
+spring.mvc.dispatch-options-request=true
